Session DB altering is moved out from global properties file.

--- a/src/main/resources/application-k8s_dev.properties
+++ b/src/main/resources/application-k8s_dev.properties
@@ -5,6 +5,9 @@ server.tomcat.max-threads=150
 server.tomcat.min-spare-threads=20
 
 spring.jpa.hibernate.ddl-auto=update
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.schema=classpath:/sql/session-schema.sql
+spring.datasource.initialization-mode=always
 
 secret.secrets.file.location=/app/secret/secrets.properties
 
