--- a/src/main/resources/application-kszk_staging.properties
+++ b/src/main/resources/application-kszk_staging.properties
@@ -7,6 +7,9 @@ spring.datasource.hikari.maximum-pool-size=200
 spring.datasource.hikari.minimum-idle=20
 
 spring.jpa.hibernate.ddl-auto=update
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.schema=classpath:/sql/session-schema.sql
+spring.datasource.initialization-mode=always
 
 secret.secrets.file.location=/app/secret/secrets.properties
 
