--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,7 @@ spring.jpa.open-in-view=false
 
 spring.datasource.data=classpath:/sql/testdata-import.sql
 
-spring.session.jdbc.initialize-schema=always
-spring.session.jdbc.schema=classpath:/sql/session-schema.sql
-spring.datasource.initialization-mode=always
+spring.session.store-type=jdbc
 
 apiClient.github.baseUrl=https://api.github.com
 apiClient.github.oauth2ResourceUserInfo.url=/user
