--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-appName=server
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.main.banner-mode=off
 spring.jpa.open-in-view=false
@@ -29,9 +27,7 @@ apiClient.fileHost.indexedFileInfo.url=/api/internal/fileInfo/indexedFileInfo
 #logging.level.org.springframework.security.web.FilterChainProxy=TRACE
 #logging.level.org.springframework.security.web=TRACE
 #logging.level.org.hibernate.SQL=debug
-
 #logging.level.com.laboschqpa.server=TRACE
-
 #logging.level.org=debug
 #logging.level.com=debug
 
@@ -41,16 +37,9 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
+server.tomcat.mbeanregistry.enabled=true
 management.endpoints.web.base-path=/actuator
 management.endpoints.web.exposure.include=*
-appconfig.statsd.host=graphite-cluster-ip
-appconfig.statsd.port=8125
-management.metrics.export.graphite.tags-as-prefix=appName,actuatorPrefix
-management.metrics.export.graphite.host=graphite-cluster-ip
-management.metrics.export.graphite.port=2004
-management.metrics.export.graphite.step=10s
-#management.metrics.export.statsd.host=graphite-cluster-ip
-#management.metrics.export.statsd.port=8125
-#management.metrics.export.statsd.flavor=etsy
-
-
+management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
