Upgrading Spring Boot to 2.4.1

--- a/src/main/resources/application-k8s_dev.properties
+++ b/src/main/resources/application-k8s_dev.properties
@@ -1,15 +1,15 @@
+spring.config.import=/app/secret/secrets.properties
+
 logging.config=classpath:log4j2-dev.xml
 
 server.tomcat.accept-count=150
-server.tomcat.max-threads=150
-server.tomcat.min-spare-threads=20
+server.tomcat.threads.max=150
+server.tomcat.threads.min-spare=20
 
 spring.jpa.hibernate.ddl-auto=update
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.schema=classpath:/sql/session-schema.sql
 spring.datasource.initialization-mode=always
-
-secret.secrets.file.location=/app/secret/secrets.properties
 
 server.servlet.session.timeout=1000h
 
