--- a/src/main/resources/application-nodocker.properties
+++ b/src/main/resources/application-nodocker.properties
@@ -1,5 +1,6 @@
+spring.config.import=secret/secrets-nodocker.properties
+
 spring.jpa.hibernate.ddl-auto=update
 
-secret.secrets.file.location=secret/secrets-nodocker.properties
 
 email.links.baseUrl=localhost:8080
