--- a/src/main/resources/application-kszk_staging.properties
+++ b/src/main/resources/application-kszk_staging.properties
@@ -1,7 +1,9 @@
+spring.config.import=/app/secret/secrets.properties
+
 server.tomcat.max-connections=10000
 server.tomcat.accept-count=300
-server.tomcat.max-threads=100
-server.tomcat.min-spare-threads=20
+server.tomcat.threads.max=100
+server.tomcat.threads.min-spare=20
 
 spring.datasource.hikari.maximum-pool-size=120
 spring.datasource.hikari.minimum-idle=20
@@ -10,8 +12,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.schema=classpath:/sql/session-schema.sql
 spring.datasource.initialization-mode=always
-
-secret.secrets.file.location=/app/secret/secrets.properties
 
 server.servlet.session.timeout=600m
 
