Refactored inter-service user authorization

--- a/src/main/resources/application-k8s_dev.properties
+++ b/src/main/resources/application-k8s_dev.properties
@@ -14,3 +14,5 @@ spring.datasource.initialization-mode=always
 server.servlet.session.timeout=1000h
 
 email.links.baseUrl=localhost
+
+auth.interservice.logRequestAndResponseHeaders=true
