Team refactor and displaying team

--- a/src/main/resources/application-k8s_dev.properties
+++ b/src/main/resources/application-k8s_dev.properties
@@ -15,4 +15,4 @@ server.servlet.session.timeout=1000h
 
 email.links.baseUrl=localhost
 
-auth.interservice.logRequestAndResponseHeaders=true
+#auth.interservice.logRequestAndResponseHeaders=true
