--- a/src/main/resources/application-k8s_dev.properties
+++ b/src/main/resources/application-k8s_dev.properties
@@ -15,4 +15,6 @@ server.servlet.session.timeout=1000h
 
 email.links.baseUrl=localhost
 
+oauth2.allowedOverriddenRedirectionOrigins=http://janosgats.com,http://localhost,http://gjani.ddns.net,http://localhost:30300,https://janosgats.com,https://localhost,https://gjani.ddns.net,https://localhost:30300
+
 #auth.interservice.logRequestAndResponseHeaders=true
