Delete File endpoint added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ apiClient.github.baseUrl=https://api.github.com
 apiClient.github.oauth2ResourceUserInfo.url=/user
 apiClient.fileHost.baseUrl=filehost-cluster-ip:4200
 apiClient.fileHost.indexedFileInfo.url=/api/internal/fileInfo/indexedFileInfo
+apiClient.fileHost.deleteFile.url=/api/internal/fileHandler/delete
 
 
 #facebook.client.client-id=
