--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,6 +6,7 @@ apiClient.github.baseUrl=https://api.github.com
 apiClient.github.oauth2ResourceUserInfo.url=/user
 apiClient.fileHost.baseUrl=filehost-cluster-ip:4200
 apiClient.fileHost.indexedFileInfo.url=/api/fileInfo/indexedFileInfo
+apiClient.fileHost.deleteFile.url=/api/internal/fileHandler/delete
 
 email.links.baseUrl=localhost
 
