--- a/src/main/resources/application-k8s_dev.properties
+++ b/src/main/resources/application-k8s_dev.properties
@@ -10,6 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.schema=classpath:/sql/session-schema.sql
 spring.datasource.initialization-mode=always
+spring.datasource.data=classpath:/sql/testdata-import.sql
 
 server.servlet.session.timeout=1000h
 
