Added schq.party as allowed OAuth2 redirection override origin

--- a/src/main/resources/application-gke_prod.properties
+++ b/src/main/resources/application-gke_prod.properties
@@ -16,3 +16,5 @@ spring.datasource.initialization-mode=always
 server.servlet.session.timeout=120m
 
 email.links.baseUrl=https://schq.party
+
+oauth2.allowedOverriddenRedirectionOrigins=https://schq.party
