users.hideSubmissionsWithoutAcceptedEmail config param

--- a/src/main/resources/application-gke_prod.properties
+++ b/src/main/resources/application-gke_prod.properties
@@ -18,3 +18,5 @@ server.servlet.session.timeout=120m
 email.links.baseUrl=https://schq.party
 
 oauth2.allowedOverriddenRedirectionOrigins=https://schq.party
+
+users.hideSubmissionsWithoutAcceptedEmail=false
