users.hideSubmissionsWithoutAcceptedEmail config param

--- a/src/main/resources/application-gke_prod.properties
+++ b/src/main/resources/application-gke_prod.properties
@@ -19,4 +19,5 @@ email.links.baseUrl=https://schq.party
 
 oauth2.allowedOverriddenRedirectionOrigins=https://schq.party
 
+#TODO: Remove this after GTB
 users.hideSubmissionsWithoutAcceptedEmail=false
