Disabled creation of new teams

--- a/src/main/resources/application-gke_prod.properties
+++ b/src/main/resources/application-gke_prod.properties
@@ -19,5 +19,6 @@ email.links.baseUrl=https://schq.party
 
 oauth2.allowedOverriddenRedirectionOrigins=https://schq.party
 
-#TODO: Remove this after GTB
+#TODO: Remove these after GTB
 users.hideSubmissionsWithoutAcceptedEmail=false
+users.disableNewTeamCreation=true
