--- a/src/main/resources/application-kszk_staging.properties
+++ b/src/main/resources/application-kszk_staging.properties
@@ -1,5 +1,7 @@
 spring.config.import=/app/secret/secrets.properties
 
+logging.config=classpath:log4j2-dev.xml
+
 server.tomcat.max-connections=10000
 server.tomcat.accept-count=300
 server.tomcat.threads.max=100
