Fixed logging config setup

--- a/src/main/resources/application-gke_prod.properties
+++ b/src/main/resources/application-gke_prod.properties
@@ -1,5 +1,7 @@
 spring.config.import=/app/secret/secrets.properties
 
+logging.config=classpath:log4j2-prod.xml
+
 server.tomcat.max-connections=10000
 server.tomcat.accept-count=100
 server.tomcat.threads.max=200
