Added QrFightArea and TeamRateControl

--- a/src/main/resources/application-gke_prod.properties
+++ b/src/main/resources/application-gke_prod.properties
@@ -20,3 +20,7 @@ server.servlet.session.timeout=120m
 email.links.baseUrl=https://schq.party
 
 oauth2.allowedOverriddenRedirectionOrigins=https://schq.party
+
+teamRateLimit.qrFightTagSubmission.limit.tenMinutely=2400
+teamRateLimit.qrFightTagSubmission.limit.hourly=7200
+teamRateLimit.qrFightTagSubmission.limit.daily=43200
