--- a/src/main/resources/application-k8s_dev.properties
+++ b/src/main/resources/application-k8s_dev.properties
@@ -18,3 +18,7 @@ email.links.baseUrl=localhost
 oauth2.allowedOverriddenRedirectionOrigins=http://janosgats.com,http://localhost,http://gjani.ddns.net,http://localhost:30300,https://janosgats.com,https://localhost,https://gjani.ddns.net,https://localhost:30300
 
 #auth.interservice.logRequestAndResponseHeaders=true
+
+teamRateLimit.qrFightTagSubmission.limit.tenMinutely=2400
+teamRateLimit.qrFightTagSubmission.limit.hourly=7200
+teamRateLimit.qrFightTagSubmission.limit.daily=43200
