--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -14,3 +14,7 @@ auth.interservice.key=asd
 
 management.endpoints.web.base-path=/actuator
 management.endpoints.web.exposure.include=*
+
+teamRateLimit.qrFightTagSubmission.limit.tenMinutely=2400
+teamRateLimit.qrFightTagSubmission.limit.hourly=7200
+teamRateLimit.qrFightTagSubmission.limit.daily=43200
