Added TeamRateControl to Riddle solution submission

--- a/src/main/resources/application-k8s_dev.properties
+++ b/src/main/resources/application-k8s_dev.properties
@@ -22,3 +22,7 @@ oauth2.allowedOverriddenRedirectionOrigins=http://janosgats.com,http://localhost
 teamRateLimit.qrFightTagSubmission.limit.tenMinutely=2400
 teamRateLimit.qrFightTagSubmission.limit.hourly=7200
 teamRateLimit.qrFightTagSubmission.limit.daily=43200
+
+teamRateLimit.riddleSubmission.limit.tenMinutely=4800
+teamRateLimit.riddleSubmission.limit.hourly=14400
+teamRateLimit.riddleSubmission.limit.daily=60000
