--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -18,3 +18,7 @@ management.endpoints.web.exposure.include=*
 teamRateLimit.qrFightTagSubmission.limit.tenMinutely=2400
 teamRateLimit.qrFightTagSubmission.limit.hourly=7200
 teamRateLimit.qrFightTagSubmission.limit.daily=43200
+
+teamRateLimit.riddleSubmission.limit.tenMinutely=4800
+teamRateLimit.riddleSubmission.limit.hourly=14400
+teamRateLimit.riddleSubmission.limit.daily=60000
