--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ apiClient.github.baseUrl=https://api.github.com
 apiClient.github.oauth2ResourceUserInfo.url=/user
 apiClient.fileHost.baseUrl=filehost-cluster-ip:4200
 apiClient.fileHost.indexedFileInfo.url=/api/internal/fileInfo/indexedFileInfo
+apiClient.fileHost.listSucceededImageVariantIdsOfFile.url=/api/internal/imageVariant/listSucceededVariantIdsOfFile
+apiClient.fileHost.markImageVariantFileAsCorrupt.url=/api/internal/imageVariant/markVariantFileAsCorrupt
 apiClient.fileHost.deleteFile.url=/api/internal/fileHandler/delete
 
 
