--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ apiClient.fileHost.deleteFile.url=/api/internal/fileHandler/delete
 #logging.level.org=debug
 #logging.level.com=debug
 
-spring.mail.host=smtp.gmail.com
+spring.mail.host=mail.sch.bme.hu
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
