Added AuthSch login

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,6 +4,8 @@ spring.jpa.open-in-view=false
 
 apiClient.github.baseUrl=https://api.github.com
 apiClient.github.oauth2ResourceUserInfo.url=/user
+apiClient.authsch.baseUrl=https://auth.sch.bme.hu
+apiClient.authsch.oauth2ResourceUserInfo.url=/api/profile
 apiClient.fileHost.baseUrl=filehost-cluster-ip:4200
 apiClient.fileHost.indexedFileInfo.url=/api/fileInfo/indexedFileInfo
 apiClient.fileHost.listSucceededImageVariantIdsOfFile.url=/api/internal/imageVariant/listSucceededVariantIdsOfFile
