--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.session.store-type=jdbc
 
 apiClient.github.baseUrl=https://api.github.com
 apiClient.github.oauth2ResourceUserInfo.url=/user
+apiClient.authsch.baseUrl=https://auth.sch.bme.hu
+apiClient.authsch.oauth2ResourceUserInfo.url=/api/profile
 apiClient.fileHost.baseUrl=filehost-cluster-ip:4200
 apiClient.fileHost.indexedFileInfo.url=/api/internal/fileInfo/indexedFileInfo
 apiClient.fileHost.listSucceededImageVariantIdsOfFile.url=/api/internal/imageVariant/listSucceededVariantIdsOfFile
